grammar.js
    program: ($) => repeat($.statement),

    identifier: (_) => {
      const alpha =
        /[^\x00-\x1F\s\p{Zs}0-9:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u2028\u2029]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/u;

      const alphanumeric =
        /[^\x00-\x1F\s\p{Zs}:;`"'@#.,|^&<=>+\-*/\\%?!~()\[\]{}\uFEFF\u2060\u200B\u2028\u2029]|\\u[0-9a-fA-F]{4}|\\u\{[0-9a-fA-F]+\}/u;
      return token(seq(alpha, repeat(alphanumeric)));
    },

    comment: (_) => token(seq("//", /[^\r\n\u2028\u2029]*/)),

    //
    // Import statement
    //

    // to name the node of literal "import" within rules like import_statement
    import_statement: ($) => seq("import", $.dotted_name, ";"),

    /*
    NOTE: underscore is to make the output node simple.
  
    using_statement: ($) =>
      seq("using", $.dotted_name, optional(seq("as", $.identifier)), ";"),

    // this can only be used in import_statement and using_statement
    // it is designed just for these occasions, so I don't give it too much expressiveness nor precedence
    dotted_name: ($) => prec(1, sep1($.identifier, ".")),
    // without reserved, it would not parse a.b in If statement
    member_expression: ($) =>
      prec(
        "member",
        seq(
          field("object", $.primary_expression),
          ".",
          field("property", $._property_name),
        ),
      ),

    // TODO: I don't understand why can't I use attribute like what python does
    //
    // member_expression and attribute has the same left and right part. So I comment attribute, I don't know why I use the two same thing. Maybe the unfamiliarity of the tree-sitter rules
    // attribute: ($) =>
    //   prec(
    //     "member",
    //     seq(
    //       field("object", $.primary_expression),
    //       ".",
    //       field("property", $.identifier),
    //     ),
    //   ),

    //
    // Statements
    //

    expression_statement: ($) => seq($.expression, $.empty_statement),

    variable_declaration: ($) =>
      seq(
        optional($.modifiers),
        choice("var", "const"),
        $.variable_declarator,
        ";",
      ),

    variable_declarator: ($) =>
      seq(
        field("name", $.identifier),
        optional(
          choice(
            seq("=", field("value", $.expression)),
            seq("as", field("type", $.type)),
            seq("=", field("value", $.expression), "as", field("type", $.type)),
            seq("as", field("type", $.type), "=", field("value", $.expression)),
          ),
        ),
      ),

    // statement_block in monkeyc don't need to append ";"
    statement_block: ($) => seq("{", repeat($.statement), "}"),

    else_clause: ($) => seq("else", $.statement),

    if_statement: ($) =>
      prec.right(
        seq(
          "if",
          field("condition", $.parenthesized_expression),
          field("consequence", $.statement),
          optional(field("alternative", $.else_clause)),
        ),
      ),

    switch_statement: ($) =>
      seq(
        "switch",
        field("value", $.parenthesized_expression),
        field("body", $.switch_body),
      ),

    for_statement: ($) =>
      seq(
        "for",
        "(",
        field("initializer", $.variable_declaration),
        field("condition", seq($.expression, ";")),
        field("increment", $.expression),
        ")",
        field("body", $.statement),
      ),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.parenthesized_expression),
        field("body", $.statement),
      ),

    do_statement: ($) =>
      prec.right(
        seq(
          "do",
          field("body", $.statement),
          "while",
          field("condition", $.parenthesized_expression),
        ),
      ),

    // I don't find many people use this statement, so I will make it simple
    // I force everyone to write catch_clause and finally_clause after try
    try_statement: ($) =>
      seq(
        "try",
        field("body", $.statement_block),
        repeat1(field("handler", $.catch_clause)),
        field("finalizer", $.finally_clause),
      ),
    catch_clause: ($) =>
      seq(
        "catch",
        optional(seq("(", field("parameter", $.expression), ")")),
        // seq("(", field("parameter", $.expression), ")"),
        field("body", $.statement_block),
      ),

    finally_clause: ($) => seq("finally", field("body", $.statement_block)),

    // these 4 will be used as $statement in for and other place
    break_statement: ($) => seq("break", ";"),
    return_statement: ($) =>
      seq(
        "return",
        optional(
          choice(
            field("value", $.expression),
            seq(field("value", $.expression), "as", field("type", $.type)),
          ),
        ),
        ";",
      ),
    throw_statement: ($) => seq("throw", $.expression, ";"),

    empty_statement: (_) => ";",

    //
    // Statement components
    //

    switch_body: ($) =>
      // seq(
      //   "{",
      //   field("cases", repeat($.switch_case)),
      //   optional(field("default", $.switch_default)),
      //   "}",
      // ),
      seq("{", repeat(choice($.switch_case, $.switch_default)), "}"),
    // seq("{", repeat($.switch_case), optional($.switch_default), "}"),

    switch_case: ($) =>
      prec.left(
        seq(
          "case",
          field("value", $.expression),
          ":",
          field("body", repeat($.statement)),
        ),
      ),

    switch_default: ($) =>
      prec.right(seq("default", ":", field("body", repeat($.statement)))),

    parenthesized_expression: ($) => seq("(", $.expression, ")"),

    //
    // Pattern
    //

    type: ($) =>
      choice(
        prec(1, $.identifier),
        $.type_null,
        $.union_type,
        $.constrained_type,
        $.member_type,
        $.generic_type,
        $.array_type,
      ),
    modifiers: ($) =>
      repeat1(
        choice("public", "protected", "private", "static", "final", "default"),
      ),

    call_expression: ($) =>
      prec(
        "call",
        seq(
          field("function", $.primary_expression),
          field("arguments", $.arguments),
        ),
      ),

    // NOTE: I do not fully get it through, but this does useful in monkeyc
    new_expression: ($) =>
      prec.right(
        "new",
        seq(
          "new",
          field("constructor", choice($.primary_expression, $.new_expression)),
          field("arguments", optional(prec.dynamic(1, $.arguments))),
        ),
      ),

    // both js and python uses pattern for left part.
    // difference is that they uses _lhs_expression or _lhs_hand_side
    // I don't know if it is needed, so I just extract the pattern
    // from those choice expressions it means an identifier or dotted_names
    pattern: ($) => choice($.identifier, $.member_expression, $.array_access),

    // _augmented_assignment_lhs: ($) =>
    //   choice($.identifier, $.parenthesized_expression,$.member_expression,),

    augmented_assignment_expression: ($) =>
      prec.right(
        "assign",
        seq(
          field("left", $.pattern),
          field(
            "operator",
            choice(
              "+=",
              "-=",
              "*=",
              "/=",
              "%=",
              "^=",
              "&=",
              "|=",
              "&&=",
              "||=",
            ),
          ),
          field("right", $.expression),
        ),
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["&&", "logical_and"],
          ["and", "logical_and"],
          ["||", "logical_or"],
          ["or", "logical_or"],
          [">>", "binary_shift"],
          ["<<", "binary_shift"],
          ["&", "bitwise_and"],
          ["^", "bitwise_xor"],
          ["|", "bitwise_or"],
          ["+", "binary_plus"],
          ["-", "binary_plus"],
          ["*", "binary_times"],
          ["/", "binary_times"],
          ["%", "binary_times"],
          ["<", "binary_relation"],
          ["<=", "binary_relation"],
          ["==", "binary_equality"],
          ["!=", "binary_equality"],
          [">=", "binary_relation"],
          [">", "binary_relation"],
          ["instanceof", "binary_relation"],
          ["has", "binary_has"],
        ].map(([operator, precedence]) =>
          prec.left(
            precedence,
            seq(
              field("left", $.expression),
              field("operator", operator),
              field("right", $.expression),
            ),
          ),
        ),
      ),

    unary_expression: ($) =>
      prec.left(
        "unary_void",
        seq(
          field("operator", choice("!", "~", "-", "+", "instanceof", "as")),
          field("argument", $.expression),
        ),
      ),

    // monkeyc does have this, but I'm not sure if there are difference
    // between these two.
    update_expression: ($) =>
      prec.left(
        choice(
          seq(
            field("argument", $.expression),
            field("operator", choice("++", "--")),
          ),
          seq(
            field("operator", choice("++", "--")),
            field("argument", $.expression),
          ),
        ),
      ),

    string: ($) =>
      choice(
        seq(
          '"',
          repeat(
            choice(
              alias($.unescaped_double_string_fragment, $.string_fragment),
              $.escape_sequence,
            ),
          ),
          '"',
        ),
      ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    number: (_) => {
      const hexLiteral = seq(
        choice('0x', '0X'),
        /[\da-fA-F](_?[\da-fA-F])*/,
      );

      const decimalDigits = /\d+/;

      const signedInteger = seq(optional(choice('-', '+')), decimalDigits);
      const exponentPart = seq(choice('e', 'E'), signedInteger);
      const decimalIntegerLiteral = choice(
        "0",
        seq(
          optional("0"),
          /[1-9]/,
          optional(seq(optional("_"), decimalDigits)),
        ),
      );

      const decimalLiteral = choice(
        seq(decimalIntegerLiteral, '.', optional(decimalDigits), optional(exponentPart)),
        seq('.', decimalDigits, optional(exponentPart)),
        seq(decimalIntegerLiteral, exponentPart),
        decimalDigits,
      );


      return token(choice(hexLiteral, decimalLiteral));
    },

    true: (_) => "true",
    false: (_) => "false",
    arguments: ($) => seq("(", commaSep(optional($.expression)), ")"),

    _property_name: ($) => alias($.identifier, $.property_identifier),

    // _semicolon: ($) => choice($._automatic_semicolon, ";"),
  },
});

/**
 * Creates a rule to match one or more of the rules separated by a comma
 *
 * @param {RuleOrLiteral} rule
 *
 * @returns {SeqRule}
 */
function commaSep1(rule) {
  return sep1(rule, ",");
}

/**
 * Creates a rule to optionally match one or more of the rules separated by a comma
 *
 * @param {Rule} rule
 *
 * @returns {ChoiceRule}
 */
function commaSep(rule) {
  return optional(commaSep1(rule));
}

/**
 * Creates a rule to match one or more occurrences of `rule` separated by `sep`
 *
 * @param {RuleOrLiteral} rule
 *
 * @param {RuleOrLiteral} separator
 *
 * @returns {SeqRule}
 */
function sep1(rule, separator) {
  return seq(rule, repeat(seq(separator, rule)));
}
